# flexer

./: CMakeLists.txt  README.md  config.json
src/: main.cc
src/commandLineParser/include/: commandLineParser.hh
src/commandLineParser/src/: commandLineParser.cc
src/flexer/: CMakeLists.txt
src/flexer/include/: flexer.hh
src/flexer/src/: client.cc
src/globals/include/: globals.hh
src/globals/src/: globals.cc
src/text/: CMakeLists.txt
src/text/include/: FlexerInstance.hh  text.hh
src/utils/include/: flexerIcon.hh
