SET(NAME flexer)
project(${NAME})



#############################################
# Sources.
#############################################

#SET(FLEXER_SRC )

#############################################
# Targets.
#############################################
#add_library(${NAME} ${MINER_SRC})
#target_include_directories(flexer PUBLIC )

#add_subdirectory()

#target_link_libraries(${NAME} )



